change fixed element a bit and displayed on mobile

--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,6 @@
 
 @media only screen and (min-width: 600px) {
     .mobile {
-	display: none;
+	display: block;
     }
 }
